# e-depot-strategies

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml
conf/base/: catalog.yml  logging.yml  parameters_build_scenario_runners.yml  parameters_preprocess.yml  parameters_simulate.yml  parameters_summarize.yml
conf/scenario_runners/availability/: parameters_build_scenario_runners.yml
conf/scenario_runners/depot_size/: parameters_build_scenario_runners.yml
conf/scenario_runners/pairwise/: parameters_build_scenario_runners.yml
conf/scenario_runners/quads/: parameters_build_scenario_runners.yml
conf/scenario_runners/quads_big/: parameters_build_scenario_runners.yml
conf/scenario_runners/single_vocation/: parameters_build_scenario_runners.yml
data/01_raw/category_assignments/: truck_class.csv  vocations.csv
notebooks/: 01-read-scenarios-applied-energy.ipynb  02-analyze-vocations.ipynb  03-energy-consump-check.ipynb
src/e_depot_strategies/: __init__.py  __main__.py  settings.py
src/e_depot_strategies/pipelines/build_scenario_runners/: __init__.py  manage_cmd_calls.py  manage_scenarios.py  nodes.py  pipeline.py
src/e_depot_strategies/pipelines/preprocess/: events.py  nodes.py  pipeline.py  process_fleetnda.py  process_role_consumption.py  process_role_energy.py
src/e_depot_strategies/pipelines/simulate/: __init__.py  depot_power.py  nodes.py  pipeline.py  utils.py
src/e_depot_strategies/pipelines/summarize/: __init__.py  nodes.py  pipeline.py  show_utilization.py
